@@ -3,6 +3,9 @@
                           avrtest NEWS
                           ============
 
+* Use flash size from section .note.gnu.avr.deviceinfo     r338  2023-10-01
+  provided by startup-code from AVR-LibC in crt<mcu>.o.
+
 * Support -mmcu=avr2, avr25, avr3, avr31, avr35,           r337  2023-09-30
   avr4, avr5 and avrxmega2 for convenience.  They
   are basically aliases of already existing cores.
